--- a/index.html
+++ b/index.html
@@ -96,32 +96,32 @@
         <div class="service">
             <h3>Pintura de Fachadas, Garagens e Área Gourmet</h3>
             <p>Valorizamos sua casa com pintura externa de alto padrão, ideal para quem busca um visual limpo, elegante e durável.</p>
-            <img src="https://via.placeholder.com/800x400.png?text=Foto+Fachada" alt="Pintura de fachada">
+            <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/IMG_5795.jpeg">
         </div>
         <div class="service">
             <h3>Impermeabilização</h3>
             <p>Protegemos sua casa contra infiltrações, usando materiais de qualidade profissional para lajes, paredes e áreas externas.</p>
-            <img src="https://via.placeholder.com/800x400.png?text=Impermeabilização" alt="Impermeabilização">
+            <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/IMG_6457.jpeg">
         </div>
         <div class="service">
             <h3>Tratamento de Trincas</h3>
             <p>Corrigimos trincas com técnicas adequadas, garantindo segurança, estética e durabilidade.</p>
-            <img src="https://via.placeholder.com/800x400.png?text=Trincas" alt="Tratamento de trincas">
+            <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/IMG_5953.jpeg">
         </div>
         <div class="service">
             <h3>Texturas e Revestimentos</h3>
             <p>Aplicamos texturas modernas e revestimentos que trazem sofisticação ao ambiente, interno ou externo.</p>
-            <img src="https://via.placeholder.com/800x400.png?text=Textura+e+Revestimento" alt="Texturas e Revestimentos">
+            <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/IMG_6326.jpeg">
         </div>
         <div class="service">
             <h3>Pintura Metálica</h3>
             <p>Ideal para portões, grades, estruturas metálicas — usamos tintas resistentes ao tempo com acabamento uniforme.</p>
-            <img src="https://via.placeholder.com/800x400.png?text=Pintura+Metálica" alt="Pintura metálica">
+            <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/IMG_6621.jpeg">
         </div>
         <div class="service">
             <h3>Restauração de Madeiras</h3>
             <p>Recuperamos o brilho e a beleza de portas, pergolados e móveis de madeira com produtos específicos e técnicas refinadas.</p>
-            <img src="https://via.placeholder.com/800x400.png?text=Madeira" alt="Restauração de madeira">
+            <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/IMG_6621.jpeg">
         </div>
     </div>
 </section>
