--- a/index.html
+++ b/index.html
@@ -12,133 +12,189 @@
       box-sizing: border-box;
     }
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       line-height: 1.6;
-      background: #f5f5f5;
-      color: #333;
+      background: #fafafa;
+      color: #222;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
     a {
       text-decoration: none;
       color: inherit;
+      transition: color 0.3s ease;
+    }
+    a:hover {
+      color: #ee6c4d;
     }
     .container {
-      max-width: 960px;
+      max-width: 1080px;
       margin: 0 auto;
-      padding: 20px;
-    }
-    header {
-      background: #005f73;
-      color: white;
       padding: 40px 20px;
+    }
+
+    header {
+      background: #fff;
+      padding: 60px 20px 40px;
       text-align: center;
-      border-radius: 0 0 15px 15px;
+      border-bottom: 1px solid #e0e0e0;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
     header h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
+      font-size: 2.75rem;
+      font-weight: 700;
+      color: #0b1821;
+      margin-bottom: 15px;
+      letter-spacing: 0.03em;
     }
     header p {
-      font-size: 1.2rem;
-      margin-bottom: 25px;
+      font-size: 1.25rem;
+      color: #555;
       font-weight: 500;
+      max-width: 700px;
+      margin: 0 auto 30px;
     }
     .btn-primary {
       background: #ee6c4d;
       color: white;
-      padding: 15px 30px;
-      font-size: 1.1rem;
+      padding: 18px 40px;
+      font-size: 1.15rem;
+      font-weight: 700;
       border: none;
-      border-radius: 8px;
+      border-radius: 30px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      box-shadow: 0 6px 12px rgba(238,108,77,0.4);
+      transition: background 0.3s ease, box-shadow 0.3s ease;
+      display: inline-block;
     }
     .btn-primary:hover {
       background: #d3543a;
+      box-shadow: 0 8px 20px rgba(211,84,58,0.5);
     }
 
     /* Benefícios */
     .benefits {
-      background: white;
-      padding: 30px 20px;
-      margin: 30px 0;
-      border-radius: 12px;
+      background: #fff;
+      padding: 50px 20px;
+      margin: 60px 0;
+      border-radius: 16px;
       display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit,minmax(240px,1fr));
+      gap: 28px;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.05);
     }
     .benefit-item {
-      background: #caf0f8;
-      border-radius: 10px;
-      padding: 20px;
+      background: #fef6f2;
+      border-radius: 14px;
+      padding: 30px 25px;
       font-weight: 600;
       text-align: center;
-      box-shadow: 0 3px 7px rgba(0,0,0,0.1);
+      color: #bb4d32;
+      font-size: 1.1rem;
+      box-shadow: 0 4px 10px rgba(238,108,77,0.2);
+      transition: transform 0.3s ease;
+      cursor: default;
+    }
+    .benefit-item:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 8px 20px rgba(238,108,77,0.3);
     }
 
     /* Serviços */
     .services {
-      background: white;
-      padding: 30px 20px;
-      margin: 30px 0;
-      border-radius: 12px;
+      background: #fff;
+      padding: 50px 20px;
+      margin: 60px 0;
+      border-radius: 16px;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.05);
     }
     .services h2 {
       text-align: center;
-      margin-bottom: 20px;
-      color: #0077b6;
+      margin-bottom: 35px;
+      font-size: 2.2rem;
+      font-weight: 700;
+      color: #bb4d32;
+      letter-spacing: 0.04em;
     }
     .service-list {
-      list-style-type: disc;
-      max-width: 700px;
+      list-style-type: none;
+      max-width: 720px;
       margin: 0 auto;
-      padding-left: 20px;
-      font-size: 1.1rem;
-      color: #023e8a;
+      padding: 0;
+      font-size: 1.15rem;
+      color: #444;
+      font-weight: 500;
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
+      gap: 18px;
+    }
+    .service-list li {
+      position: relative;
+      padding-left: 28px;
+      line-height: 1.4;
+      cursor: default;
+    }
+    .service-list li::before {
+      content: "✓";
+      position: absolute;
+      left: 0;
+      top: 0;
+      font-size: 1.25rem;
+      color: #ee6c4d;
+      font-weight: 700;
+      line-height: 1;
     }
 
     /* Depoimentos */
     .testimonials {
-      background: white;
-      padding: 30px 20px;
-      margin: 30px 0;
-      border-radius: 12px;
-      max-width: 700px;
+      background: #fff;
+      padding: 50px 20px;
+      margin: 60px 0;
+      border-radius: 16px;
+      max-width: 720px;
       margin-left: auto;
       margin-right: auto;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 6px 22px rgba(0,0,0,0.07);
     }
     .testimonials h2 {
       text-align: center;
-      margin-bottom: 20px;
-      color: #0077b6;
+      margin-bottom: 35px;
+      font-size: 2.2rem;
+      font-weight: 700;
+      color: #bb4d32;
+      letter-spacing: 0.04em;
     }
     blockquote {
       font-style: italic;
-      border-left: 4px solid #ee6c4d;
-      padding-left: 15px;
-      margin-bottom: 15px;
+      border-left: 5px solid #ee6c4d;
+      padding-left: 20px;
+      margin-bottom: 28px;
       color: #555;
+      font-size: 1.1rem;
+      line-height: 1.5;
     }
     blockquote footer {
-      font-weight: 600;
+      font-weight: 700;
       color: #222;
-      margin-top: 5px;
+      margin-top: 8px;
       text-align: right;
+      font-size: 1rem;
+      letter-spacing: 0.02em;
     }
 
     /* Galeria */
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-      gap: 15px;
-      margin: 30px 0;
+      grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
+      gap: 22px;
+      margin: 60px 0;
     }
     .gallery img {
       width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.12);
+      border-radius: 14px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
       object-fit: cover;
-      height: 180px;
+      height: 200px;
       transition: transform 0.3s ease;
       cursor: pointer;
     }
@@ -148,87 +204,132 @@
 
     /* Oferta */
     .offer {
-      background: #ee6c4d;
+      background: #bb4d32;
       color: white;
       text-align: center;
-      padding: 25px 15px;
-      font-size: 1.3rem;
+      padding: 30px 25px;
+      font-size: 1.4rem;
       font-weight: 700;
-      border-radius: 12px;
-      margin: 40px 0;
-      box-shadow: 0 3px 15px rgba(238,108,77,0.4);
+      border-radius: 16px;
+      margin: 70px 0;
+      box-shadow: 0 6px 25px rgba(187,77,50,0.5);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      letter-spacing: 0.04em;
     }
 
     /* Formulário */
     form {
-      background: white;
-      padding: 30px 20px;
-      border-radius: 12px;
-      max-width: 500px;
-      margin: 0 auto 50px auto;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+      background: #fff;
+      padding: 50px 30px;
+      border-radius: 16px;
+      max-width: 540px;
+      margin: 0 auto 70px auto;
+      box-shadow: 0 6px 22px rgba(0,0,0,0.08);
+      font-weight: 600;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     form h2 {
       text-align: center;
-      margin-bottom: 25px;
-      color: #0077b6;
+      margin-bottom: 35px;
+      color: #bb4d32;
+      font-size: 2rem;
+      letter-spacing: 0.03em;
+      font-weight: 700;
     }
     form label {
       display: block;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
       font-weight: 600;
+      color: #444;
     }
     form input, form select {
       width: 100%;
-      padding: 12px 10px;
-      margin-bottom: 20px;
-      border-radius: 7px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-      transition: border-color 0.3s ease;
+      padding: 15px 12px;
+      margin-bottom: 28px;
+      border-radius: 10px;
+      border: 1.8px solid #ccc;
+      font-size: 1.1rem;
+      transition: border-color 0.3s ease, box-shadow 0.3s ease;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     form input:focus, form select:focus {
-      border-color: #ee6c4d;
+      border-color: #bb4d32;
       outline: none;
+      box-shadow: 0 0 8px rgba(187,77,50,0.5);
     }
     form button {
-      background: #ee6c4d;
+      background: #bb4d32;
       color: white;
-      padding: 15px;
+      padding: 18px;
       border: none;
-      font-size: 1.2rem;
-      border-radius: 8px;
+      font-size: 1.25rem;
+      border-radius: 30px;
       cursor: pointer;
       width: 100%;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, box-shadow 0.3s ease;
       font-weight: 700;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      letter-spacing: 0.04em;
+      box-shadow: 0 6px 18px rgba(187,77,50,0.5);
     }
     form button:hover {
-      background: #d3543a;
+      background: #99402a;
+      box-shadow: 0 8px 25px rgba(153,64,42,0.7);
     }
 
     /* Rodapé */
     footer {
-      background: #005f73;
-      color: white;
-      padding: 20px;
+      background: #fff;
+      color: #555;
+      padding: 30px 20px;
       text-align: center;
-      font-size: 0.9rem;
-      border-radius: 15px 15px 0 0;
+      font-size: 1rem;
+      border-top: 1px solid #e0e0e0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     footer a {
-      color: #ee6c4d;
+      color: #bb4d32;
       font-weight: 700;
-      margin: 0 5px;
+      margin: 0 8px;
+      transition: color 0.3s ease;
+    }
+    footer a:hover {
+      color: #ee6c4d;
     }
 
     /* Responsividade */
     @media(max-width: 480px) {
       header h1 {
-        font-size: 2rem;
+        font-size: 1.9rem;
       }
       .btn-primary {
         width: 100%;
+        padding: 18px 0;
+      }
+      .benefits {
+        grid-template-columns: 1fr;
+        padding: 40px 10px;
+      }
+      .services {
+        padding: 40px 10px;
+      }
+      .service-list {
+        grid-template-columns: 1fr;
+        font-size: 1rem;
+      }
+      .testimonials {
+        padding: 40px 10px;
+      }
+      .gallery {
+        grid-template-columns: 1fr;
+        gap: 18px;
+        margin: 40px 0;
+      }
+      form {
+        padding: 40px 15px;
+      }
+      footer {
+        font-size: 0.9rem;
       }
     }
   </style>
